add prompt model validation on saving against swagger schema add test to check expected behaviour
